--- a/catalog.html
+++ b/catalog.html
@@ -8,14 +8,17 @@
 <body>
   <header>
     <div class="header-item1">
-      <div class="header-logo"><img src="#" alt="img"></div>
+      <a href="index.html">
+        <img src="http://placehold.it/150x100" width="150" height="150" alt="img">
+      </a>
+    </div>
       <nav class="menu">
         <ul class="menu-list">
           <li class="active"><a href="#">Каталог</a>
             <ul class="popup-list">
-              <li><a href="index.html">Новинки</a></li>
-              <li><a href="#">Сливочное</a></li>
-              <li class="active"><a href="catalog.html">Щербеты</a></li>
+              <li><a href="#">Новинки</a></li>
+              <li class="popup-list-active"><a href="#">Сливочное</a></li>
+              <li><a href="#">Щербеты</a></li>
               <li><a href="#">Фруктовый лед</a></li>
               <li><a href="#">Мелорин</a></li>
             </ul>
@@ -24,18 +27,150 @@
           <li><a href="#">О Компании</a></li>
         </ul>
       </nav>
-    </div>
+
     <div class="header-item2">
-        <a class="item2-search" href="#">!search</a>
-        <a class="item2-signin" href="#">Вход</a>
+        <a class="item2-search" href="#">Поиск</a>
+        <ul class="user-profile">
+          <li class="profile-signin"><a href="#">Вход</a></li>
+        </ul>
         <a class="item2-shipcart" href="#">Пусто</a>
-      <div class="time">
-        <p>
+        <span class="time-work">
           С 10 до 20, ежедневно
-        <b>8 812 450-25-25</b>
-        </p>
-      </div>
+          <a href="tel:88124502525">8 812 450-25-25</a>
+        </span>
     </div>
   </header>
+  <main class="container">
+    <div class="filters-block">
+      <div class="filter-item1">
+        <h1>Сливочное мороженное</h1>
+        <span>Сортировка</span>
+        <!-- Здесь будет <select> -->
+        <span>Цена: 100руб.-500 руб.</span>
+        <!-- Здесь будет <input type="range"> -->
+        <span>Жирность:</span>
+        <!-- Здесь будет 4 <input type="radio"> -->
+      </div>
+      <div class="filter-item2">
+        <span>Наполнители</span>
+          <!-- Здесь будет 4 <input type="checkbox"> -->
+          <!-- Здесь будет <button>  -->
+      </div>
+    </div>
+
+    <ul class="product-list">
+      <li>
+        <img src="http://placehold.it/150x100" width="150" height="150" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+        <span>310</span>
+        <span>/кг</span>
+        <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
+      </li>
+      <li>
+        <img src="http://placehold.it/150x100" width="150" height="150" alt="Сливочно-кофейное с кусочками шоколада">
+        <span>380</span>
+        <span>/кг</span>
+        <h3>Сливочно-кофейное с кусочками шоколада</h3>
+      </li>
+      <li>
+        <img src="http://placehold.it/150x100" width="150" height="150" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+        <span>355</span>
+        <span>/кг</span>
+        <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
+      </li>
+      <li>
+        <img src="http://placehold.it/150x100" width="150" height="150" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+        <span>355</span>
+          <span>/кг</span>
+        <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
+      </li>
+        <li>
+        <img src="http://placehold.it/150x100" width="150" height="150" alt="Сливочное крем-брюле с карамельной подливкой">
+        <span>415</span>
+        <span>/кг</span>
+        <h3>Сливочное крем-брюле с карамельной подливкой</h3>
+      </li>
+      <li>
+        <img src="http://placehold.it/150x100" width="150" height="150" alt="Сливочное с брусничным джемом">
+        <span>325</span>
+        <span>/кг</span>
+        <h3>Сливочное с брусничным джемом</h3>
+      </li>
+      <li>
+        <img src="http://placehold.it/150x100" width="150" height="150" alt="Сливочно-черничное с цельными ягодами черники">
+        <span>410</span>
+        <span>/кг</span>
+        <h3>Сливочное с брусничным джемом</h3>
+      </li>
+      <li>
+        <img src="http://placehold.it/150x100" width="150" height="150" alt="Сливочно-лимонное с карамельной присыпкой">
+        <span>375</span>
+        <span>/кг</span>
+        <h3>Сливочно-лимонное с карамельной присыпкой</h3>
+      </li>
+      <li>
+        <img src="http://placehold.it/150x100" width="150" height="150" alt="Сливочное с шоколадной стружкой">
+        <span>320</span>
+        <span>/кг</span>
+        <h3>Сливочное с шоколадной стружкой</h3>
+      </li>
+      <li>
+        <img src="http://placehold.it/150x100" width="150" height="150" alt="Сливочно-ванильное с кусочками шоколада">
+        <span>440</span>
+        <span>/кг</span>
+        <h3>Сливочно-ванильное с кусочками шоколада</h3>
+      </li>
+      <li>
+        <img src="http://placehold.it/150x100" width="150" height="150"  alt="Сливочное с ментоловым сиропом">
+        <span>435</span>
+        <span>/кг</span>
+        <h3>Сливочное с ментоловым сиропом</h3>
+      </li>
+      <li>
+        <img src="http://placehold.it/150x100"  width="150" height="150" alt="Сливочное с кусочками черного шоколада">
+        <span>355</span>
+        <span>/кг</span>
+        <h3>Сливочное с кусочками черного шоколада</h3>
+      </li>
+      <li>
+        <img src="http://placehold.it/150x100" width="150" height="150" alt="Сливочное с мятным сиропом">
+        <span>420</span>
+        <span>/кг</span>
+        <h3>Сливочное с мятным сиропом</h3>
+        </li>
+      </ul>
+      <ul class="page-list">
+        <li class="page-list-active">1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+      </ul>
+  </main>
+
+  <footer>
+    <div class="footer-social">
+      <ul>
+        <li><a href="#">Twitter</a></li>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">Vkontakte</a></li>
+      </ul>
+    </div>
+    <nav class="footer-menu">
+      <ul>
+        <li><a href="#">Для поставщиков</a></li>
+        <li><a href="#">Наши документы</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">О производстве</a></li>
+        <li><a href="#">Экологические стандарты</a></li>
+      </ul>
+    </nav>
+    <div class="footer-banner">
+      <img src="http://placehold.it/150x100" alt="img" width="150" height="150">
+      <p>html academy</p>
+      <p><a href="https://htmlacademy.ru/intensive/htmlcss">Сделано в HTML Academy 2017</a></p>
+    </div>
+  </footer>
 </body>
 </html>
